welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:4: error: not found: value color
  if(getCouleurSol()==color.green){
                      ^SlugSnail:8: error: not found: value param
    param =0
    ^SlugSnail:11: error: not enough arguments for method isFacingTrail: (col: Int)Boolean.
Unspecified value parameter col.
      if (isFacingTrail()){
                       ^SlugSnail:30: error: not found: value color
  	if ((getCouleurSol()==Color.green && col == 1)||(getCouleurSol() == color.pink && col = 0)){
                                                                            ^